--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Fractal makes cloud-powered computers."
+      content="Fractal streams a powerful computer to any device."
     />
     <script src="https://js.stripe.com/v3/"></script>
     <link rel="apple-touch-icon" href="logo192.png" />
