--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="Fractal brings the power of a workstation to any Internet-connected device."
     />
+    <meta
+      name="application-name"
+      content="Fractal"
+    />
     <script src="https://js.stripe.com/v3/"></script>
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
