--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,10 @@
     <meta data-react-helmet="true" property="og:title" content="The Power of a Workstation on Any Device"/>
     <meta data-react-helmet="true" property="og:site_name" content="Fractal"/>
     <meta data-react-helmet="true" property="og:url" content="https://fractalcomputers.com"/>
-    <meta data-react-helmet="true" property="og:description" content="Join the next generation of creative professionals on the world&#x27;s most powerful and collaborative consumer cloud computing platform. Edit, render and play at crazy speeds from any device."/>
+    <meta data-react-helmet="true" property="og:description" content="Experience the next generation of peresonal computing with Fractal's powerful, collaborative cloud computers. Edit, render and play at crazy speeds from any device."/>
     <meta data-react-helmet="true" name="description" content="Join the next generation of creative professionals on the world&#x27;s most powerful and collaborative consumer cloud computing platform. Edit, render and play at crazy speeds from any device."/>
     <meta data-react-helmet="true" name="twitter:card" content="summary_large_image"/>
-    <meta data-react-helmet="true" name="twitter:description" content="Join the next generation of creative professionals on the world&#x27;s most powerful and collaborative consumer cloud computing platform. Edit, render and play at crazy speeds from any device."/>
+    <meta data-react-helmet="true" name="twitter:description" content="Experience the next generation of peresonal computing with Fractal's powerful, collaborative cloud computers. Edit, render and play at crazy speeds from any device."/>
     <meta data-react-helmet="true" name="twitter:title" content="Fractal: The Power of a Workstation on Any Device"/>
     <meta data-react-helmet="true" name="twitter:site" content="@fractalcomputer"/>
     <meta data-react-helmet="true" name="twitter:image" content="%PUBLIC_URL%/thumbnail.png"/>
